--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </li>
       </ul>
     </section>
-
-    <script type="module" src="./js/script.js"></script>
+    <script src="./js/perks.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
