--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
     <section class="perks-section">
       <ul class="list">
         <li>
-          <button type="button" name="wood" class="perk-wood-btn">Wood</button>
+          <button type="button" name="wood" class="perk-btn">Wood</button>
           <p class="cost"></p>
         </li>
         <li>
-          <button type="button" name="silver" class="perk-wood-btn">
-            Silver
-          </button>
+          <button type="button" name="silver" class="perk-btn">Silver</button>
           <p class="cost"></p>
         </li>
       </ul>
