--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </button>
     </section>
     <section class="perks-section">
-      <ul class="list">
+      <ul id="perksItems" class="list">
         <li>
           <button type="button" name="wood" class="perk-btn">Wood</button>
           <p class="cost"></p>
