--- a/index.html
+++ b/index.html
@@ -22,16 +22,7 @@
       </button>
     </section>
     <section class="perks-section">
-      <ul id="perksItems" class="list">
-        <li>
-          <button type="button" name="wood" class="perk-btn">Wood</button>
-          <p class="cost"></p>
-        </li>
-        <li>
-          <button type="button" name="silver" class="perk-btn">Silver</button>
-          <p class="cost"></p>
-        </li>
-      </ul>
+      <ul id="perksItems" class="list"></ul>
     </section>
     <script src="./js/perks.js"></script>
     <script src="./js/script.js"></script>
