--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <section class="perks-section">
       <ul id="perksItems" class="list"></ul>
     </section>
-    <script src="./js/perks.js"></script>
-    <script src="./js/script.js"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
