--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/stylesShop.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,6 +24,21 @@
     </section>
     <section class="perks-section">
       <ul id="perksItems" class="list"></ul>
+    </section>
+    <section class="shop-items">
+      <div class="border-list">
+        <ul class="flex-card">
+          <div class="kard-item">
+            <button type="button" class="button-update">2X</button>
+          </div>
+          <div class="kard-item">
+            <button type="button" class="button-update">5X</button>
+          </div>
+          <div class="kard-item">
+            <button type="button" class="button-update">10X</button>
+          </div>
+        </ul>
+      </div>
     </section>
     <script src="./js/perks.js"></script>
     <script src="./js/script.js"></script>
